[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slam"
version = "1.0.0"
description = "EKF-based Simultaneous Localization and Mapping using 2D LIDAR"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Tiago Pereira Correia", email = "up201806248@up.pt"},
    {name = "Joao Nuno Leitao", email = "up201806619@up.pt"},
]
keywords = [
    "slam",
    "robotics",
    "kalman-filter",
    "lidar",
    "localization",
    "mapping",
    "autonomous-systems",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipython>=7.0.0",
    "celluloid>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/jnuno2000/SLAM"
Repository = "https://github.com/jnuno2000/SLAM"
Issues = "https://github.com/jnuno2000/SLAM/issues"

[project.scripts]
slam = "main:main"

[tool.setuptools.packages.find]
include = ["slam*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
ignore = ["E501", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]
